# adv-jax-math

./: .buildinfo  .gitattributes  .gitignore  CITATION.cff  MANIFEST.in  README.rst  api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.rst
.github/workflows/: black.yml  jax_tests.yml  linting.yml  release.yml  scheduled.yml  unittest.yml
_api/: adv_jax_math.batch_jacfwd.html  adv_jax_math.batch_jacrev.html  adv_jax_math.batch_map.html  adv_jax_math.batch_vectorize.html  adv_jax_math.batch_vmap.html  adv_jax_math.sparse_pullback.html  adv_jax_math.sparse_pullback_map.html
_sources/_api/: adv_jax_math.batch_jacfwd.rst.txt  adv_jax_math.batch_jacrev.rst.txt  adv_jax_math.batch_map.rst.txt  adv_jax_math.batch_vectorize.rst.txt  adv_jax_math.batch_vmap.rst.txt  adv_jax_math.sparse_pullback.rst.txt  adv_jax_math.sparse_pullback_map.rst.txt
_static/: documentation_options.js
adv_jax_math/: __init__.py  _batch.py  _sparse.py  _utils.py  _version.py
devtools/: requirements-dev.txt
docs/: api.rst  conf.py
tests/: __init__.py  test_batch.py  test_sparse.py  test_utils.py
